# onliner-bots

2/: .env.example  .gitignore  Dockerfile  README.md  RESTORE_POINT.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
2/app/: main.py
2/app/application/dto/: search.py
2/app/application/ports/: page_fetcher.py  search_provider.py
2/app/application/services/: enrichment_pipeline.py  event_candidate_service.py  search_provider_service.py  search_query_service.py  search_run_service.py
2/app/application/tasks/: enrichment.py
2/app/application/use_cases/: enrich_event.py  run_search.py  score_event.py
2/app/core/: config.py  exceptions.py  logging.py  scoring_config.py
2/app/domain/: entities.py  enums.py
2/app/domain/services/: catalog_page_detector.py  deduplication.py  event_scoring.py  event_type_classifier.py  lead_time_validator.py  minsk_detector.py  recurrence_detector.py
2/app/infrastructure/: factory.py  scheduler.py
2/app/infrastructure/db/: models.py  repositories.py  session.py
2/app/infrastructure/enrichment/: catalog_link_extractor.py  html_metadata_extractor.py  llm_analyzer.py  page_fetcher.py  page_parser.py  supplementary_search.py  text_sanitize.py
2/app/infrastructure/search/: fake_provider.py  searxng_provider.py  (+1 more)
2/app/tests/: conftest.py
2/config/: scoring_rules.yaml
2/config/searxng/: settings.yml
2/scripts/: inspect_page.py
event-search-bot/: .env.example  Dockerfile  README.md  RESTORE_POINT.md  docker-compose.yml  pyproject.toml
event-search-bot/config/searxng/: settings.yml
event-search-bot/event_search_bot/: __init__.py  config.py  main.py
event-search-bot/event_search_bot/bot/: access.py  formatters.py  handlers.py  handlers_callbacks.py  keyboards.py  leads_poller.py  navigation.py
event-search-bot/event_search_bot/partnership/: __init__.py  models.py  reader.py
event-search-bot/event_search_bot/pipeline/: __init__.py  analytics.py  candidate_gate.py  catalog.py  catalog_feed.py  enrich.py  event_type.py  export.py  filters.py  html_meta.py  jobs.py  lead_time.py  minsk_detector.py  models.py  non_event.py  page_fetcher.py  page_parser.py  recurrence.py  runner.py  scoring.py  scoring_config.py  structured.py  text_sanitize.py  theme_matcher.py  trusted_catalogs.py
event-search-bot/event_search_bot/search/: filter.py  models.py  searxng.py  service.py
event-search-bot/event_search_bot/storage/: user_storage.py
event-search-bot/tests/: test_candidate_gate.py  test_filter.py  test_non_event.py
partnership-bot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
partnership-bot/partnership_bot/: config.py  handlers.py  main.py  navigation.py  scoring.py  storage.py
(+33 files in other folders)
